[package]
name = "forge-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
http-type = "20.0.6"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
